--- a/apps/block_scout_web/assets/css/theme/_fonts.scss
+++ b/apps/block_scout_web/assets/css/theme/_fonts.scss
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Rubik:200,300,400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
