--- a/apps/block_scout_web/assets/css/theme/_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_variables.scss
@@ -1,5 +1,5 @@
 @import "base_variables";
-@import "neutral_variables";
+// @import "neutral_variables";
 // @import "xusdt_variables";
 // @import "dai_variables";
 // @import "ethereum_classic_variables";
@@ -16,7 +16,7 @@
 // @import "rinkeby_variables";
 // @import "ropsten_variables";
 // @import "social_variables";
-// @import "sokol_variables";
+@import "sokol_variables";
 // @import "tobalaba_variables";
 // @import "tomochain_variables";
 // @import "rsk_variables";
