--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -38,41 +38,14 @@
                     gettext("Blocks"),
                     to: blocks_path(@conn, :index),
                     class: "dropdown-item #{tab_status("blocks", @conn.request_path)}")%>
-              <%= link(gettext("Uncles"),
-                    to: uncle_path(@conn, :uncle),
-                    class: "dropdown-item #{tab_status("uncles", @conn.request_path)}")%>
-              <%= link(gettext("Forked Blocks (Reorgs)"),
-                    to: reorg_path(@conn, :reorg),
-                    class: "border-bottom dropdown-item #{tab_status("reorgs", @conn.request_path)}")%>
-              <div class="nav-submenu">
-                <span>
-                  <%= gettext("Transactions") %>
-                </span>
-              </div>
-              <% json_rpc_named_arguments = Application.fetch_env!(:indexer, :json_rpc_named_arguments) %>
-              <% variant = Keyword.fetch!(json_rpc_named_arguments, :variant) %>
-              <% show_withdrawals? = not Application.get_env(:indexer, Indexer.Fetcher.Withdrawal.Supervisor)[:disabled?] %>
               <%= link(
-                    gettext("Validated"),
+                    gettext("Transactions"),
                     to: transaction_path(@conn, :index),
-                    class: "#{if variant == EthereumJSONRPC.Besu, do: "border-bottom", else: ""} dropdown-item #{tab_status("txs", @conn.request_path)}"
+                    class: "dropdown-item #{tab_status("txs", @conn.request_path)}"
                   ) %>
-
-              <%= if variant !== EthereumJSONRPC.Besu do %>
-                <%= link(
-                      gettext("Pending"),
-                      class: "border-bottom dropdown-item #{tab_status("pending-transactions", @conn.request_path)}",
-                      "data-test": "pending_transactions_link",
-                      to: pending_transaction_path(@conn, :index)
-                    ) %>
-              <% end %>
               <%= link(gettext("Verified contracts"),
                     to: verified_contracts_path(@conn, :index),
                     class: "dropdown-item border-bottom #{tab_status("reorgs", @conn.request_path)}")%>
-              <%= if show_withdrawals? do %>
-                <%= link(gettext("Withdrawals"),
-                    to: withdrawal_path(@conn, :index),
-                    class: "dropdown-item #{tab_status("reorgs", @conn.request_path)}")%>
               <% end %>
             </div>
           </li>
