--- a/apps/block_scout_web/lib/block_scout_web/templates/address_token_balance/_token_balances.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address_token_balance/_token_balances.html.eex
@@ -47,30 +47,30 @@
               placeholder: gettext("Search tokens")
             ) %>
       </div>
-      <%= if Enum.any?(@token_balances, fn token_balance -> token_balance.token.type == "ERC-721" end) do %>
+      <%= if Enum.any?(@token_balances, fn token_balance -> token_balance.token.type == "URC-721" end) do %>
         <%= render(
               "_tokens.html",
               conn: @conn,
-              token_balances: filter_by_type(@token_balances, "ERC-721"),
-              type: "ERC-721"
+              token_balances: filter_by_type(@token_balances, "URC-721"),
+              type: "URC-721"
             ) %>
       <% end %>
 
-      <%= if Enum.any?(@token_balances, fn token_balance -> token_balance.token.type == "ERC-1155" end) do %>
+      <%= if Enum.any?(@token_balances, fn token_balance -> token_balance.token.type == "URC-1155" end) do %>
         <%= render(
               "_tokens.html",
               conn: @conn,
-              token_balances: filter_by_type(@token_balances, "ERC-1155"),
-              type: "ERC-1155"
+              token_balances: filter_by_type(@token_balances, "URC-1155"),
+              type: "URC-1155"
             ) %>
       <% end %>
 
-      <%= if Enum.any?(@token_balances, fn token_balance -> token_balance.token.type == "ERC-20" end) do %>
+      <%= if Enum.any?(@token_balances, fn token_balance -> token_balance.token.type == "URC-20" end) do %>
         <%= render(
               "_tokens.html",
               conn: @conn,
-              token_balances: filter_by_type(@token_balances, "ERC-20"),
-              type: "ERC-20"
+              token_balances: filter_by_type(@token_balances, "URC-20"),
+              type: "URC-20"
             ) %>
       <% end %>
     </div>
