--- a/apps/block_scout_web/lib/block_scout_web/templates/transaction/_total_transfers.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/transaction/_total_transfers.html.eex
@@ -1,4 +1,6 @@
 <%= case token_transfer_amount(@transfer) do %>
+    <% {:ok, :erc404_instance} -> %>
+        <%= render BlockScoutWeb.TransactionView, "_transfer_token_with_id.html", transfer: @transfer, token_id: List.first(@transfer.token_ids) %>
     <% {:ok, :erc721_instance} -> %>
         <%= render BlockScoutWeb.TransactionView, "_transfer_token_with_id.html", transfer: @transfer, token_id: List.first(@transfer.token_ids) %>
     <% {:ok, :erc1155_instance, value} -> %>
