Display token icon on token detail page

--- a/apps/block_scout_web/lib/block_scout_web/templates/tokens/overview/_details.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/tokens/overview/_details.html.eex
@@ -23,11 +23,17 @@
                   <%= nil %>
               <% end %>
               <%= if token_name?(@token) do %>
+
                   <span
-                    id="token-icon"
-                    data-chain-id="<%= Application.get_env(:block_scout_web, :chain_id) %>"
-                    data-address-hash="<%= Address.checksum(@token.contract_address_hash) %>"
-                    data-display-token-icons="<%= Application.get_env(:block_scout_web, :display_token_icons) %>">
+                    id="token-icon">
+                  <% chain_id_for_token_icon = Application.get_env(:block_scout_web, :chain_id) %>
+                  <% address_hash = @token.contract_address_hash %>
+                  <%=
+                    render BlockScoutWeb.TokensView,
+                    "_token_icon.html",
+                    chain_id: chain_id_for_token_icon,
+                    address: Address.checksum(address_hash)
+                  %>
                   </span>
                   <div class="title-with-label"><%= @token.name %></div>
               <% else %>
